Fixed span row on the tittle. Now fill whole page on mobile ;

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,15 +1,21 @@
+.span12 {
+  width:100%;
+  padding-left:15px;
+  padding-right:15px;
+}
+
 #container{
   display: inline-block;
   text-align: center;
   border-width: 1px;
-}  
+}
 
 #block {
   display: inline-block;
   text-align: center;
   border-width: 1px;
   border-width: 1px;
-} 
+}
 
 #row {
   margin-right: -100px;
@@ -18,7 +24,7 @@
 #firstblock {
   display: inline-block;
   text-align: center;
-}  
+}
 
 #secondblock {
   color: White;
